--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
 canvas {
   height: 600px;
-  width: 800px;
+  width: 600px;
   border: 5px solid red;
   margin: 0;
+  background-color: black;
+}
+
+img {
+  height: 15px;
+  width: 10px;
 }
