--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 body {
-  background-image: url("../imgs/background.jpg");
+  background-image: url("../imgs/brd2.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   height: 100vh;
@@ -34,9 +34,31 @@ img {
 }
 
 .blue {
-  background-color: blue;
+  background-color: cadetblue;
 }
 
 .black {
   background-color: black;
+}
+
+@keyframes shake {
+  0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
+  10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+  20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+  30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+  40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+  50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+  60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+  70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+  80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+  90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+  100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+.shake:hover {
+  -webkit-animation-name: shake;
+  -webkit-animation-duration: 0.8s;
+  -webkit-transform-origin:50% 50%;
+  -webkit-animation-iteration-count: 100;
+  -webkit-animation-timing-function: linear;
 }
