--- a/css/style.css
+++ b/css/style.css
@@ -11,14 +11,53 @@ canvas, #instructions {
   background-color: black;
 }
 
-h1, p {
+h1, p, h3 {
   color: white;
   text-align: center;
+}
+
+h1, h3 {
   font-family: 'Fjalla One', sans-serif;
 }
 
-h1 {  
+h1 {
   font-size: 36px;
+}
+
+.header {  
+  padding: 30px 0;
+}
+
+h3 {
+  font-size: 20px;
+  margin-top: 10px;
+}
+
+p {
+  font-family: monospace;
+  font-size: 16px;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  padding: 0 30px
+}
+
+.instructions-bottom-text {
+  margin: 30px;
+}
+
+button {
+  font-weight: bold;
+  font-size: 18px;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: grey
 }
 
 body {
@@ -31,6 +70,40 @@ body {
 img {
   height: 15px;
   width: 10px;
+}
+
+aside {
+  padding: 15px;
+  background-color: black;
+  height: 200px;
+  width: 200px;
+  border: 3px solid white;
+}
+
+.left-aside {
+  float: left;
+  margin-left: 5%;
+}
+
+.right-aside {
+  float: right;
+  margin-right: 5%;
+}
+
+aside p {
+  text-align: left;
+}
+
+.instruction-images {
+  height: 36px;
+  width: 36px;
+  margin-right: 30px;
+}
+
+.small {
+  height: 18px;
+  width: 18px;
+  margin-right: 48px;
 }
 
 .container {
