--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ canvas, #instructions {
   background-color: black;
 }
 
-h1, p, h3, h4 {
+h1, p, h3, h4, h5 {
   color: white;
   text-align: center;
 }
@@ -26,6 +26,11 @@ h1 {
 
 h4 {
   font-size: 30px;
+}
+
+h5 {
+  font-size: 24px;
+  margin: 25px;
 }
 
 a {
@@ -108,8 +113,8 @@ aside p {
 }
 
 .instruction-images {
-  height: 36px;
-  width: 36px;
+  height: 40px;
+  width: 80px;
   margin-right: 30px;
 }
 
